--- a/css/palette.scss
+++ b/css/palette.scss
@@ -86,6 +86,10 @@ $system: (
           neutral,
           95,
         ),
+        surface-container: (
+          neutral,
+          94,
+        ),
         surface-container-highest: (
           neutral,
           90,
@@ -158,6 +162,10 @@ $system: (
         surface-container-low: (
           neutral,
           10,
+        ),
+        surface-container: (
+          neutral,
+          12,
         ),
         surface-container-highest: (
           neutral,
