--- a/components/color-scheme.module.scss
+++ b/components/color-scheme.module.scss
@@ -1,18 +1,20 @@
 .picker {
   :global(.react-colorful__pointer) {
-    box-shadow: var(--elevation-1);
-    background-color: var(--md-ref-palette-neutral95);
-    border-color: var(--md-ref-palette-neutral95);
+    box-shadow: var(--md-sys-elevation-1);
+    background-color: var(--md-ref-palette-neutral-95);
+    border-color: var(--md-ref-palette-neutral-95);
   }
   :global(.react-colorful__saturation) {
-    border-radius: var(--md-sys-shape-small) var(--md-sys-shape-small) 0 0;
+    border-radius: var(--md-sys-shape-corner-small)
+      var(--md-sys-shape-corner-small) 0 0;
   }
   :global(.react-colorful__last-control) {
-    border-radius: 0 0 var(--md-sys-shape-small) var(--md-sys-shape-small);
+    border-radius: 0 0 var(--md-sys-shape-corner-small)
+      var(--md-sys-shape-corner-small);
   }
   &Surface {
     overflow: visible;
-    border-radius: var(--md-sys-shape-medium);
+    border-radius: var(--md-sys-shape-corner-medium);
     padding: 16px;
   }
 }
