Rework typography variants

--- a/components/color-scheme.module.scss
+++ b/components/color-scheme.module.scss
@@ -1,5 +1,5 @@
 :global(.react-colorful).picker {
-  margin: 16px;
+  margin: 16px auto;
   width: 256px;
   height: 256px;
   :global(.react-colorful__hue) {
