--- a/css/govuk/header.scss
+++ b/css/govuk/header.scss
@@ -8,4 +8,12 @@
       border-bottom: 0;
     }
   }
+  .govuk-service-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    .govuk-header__navigation-item {
+      display: inline-block;
+    }
+  }
 }
