--- a/css/govuk/header.scss
+++ b/css/govuk/header.scss
@@ -14,6 +14,7 @@
     align-items: baseline;
     .govuk-header__navigation-item {
       display: inline-block;
+      margin-left: auto;
     }
   }
 }
