--- a/app/keyset/[keysetId]/page.module.scss
+++ b/app/keyset/[keysetId]/page.module.scss
@@ -1,4 +1,12 @@
+@use "css/util";
+
 .actions {
   display: flex;
   gap: 10px;
+  padding: 15px 0;
+}
+
+.thumbnail {
+  position: relative;
+  @include util.aspect-ratio(16, 9);
 }
